feat: Readme quick setup guide

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:uuWqGALnbfDINfBwL5HWhOx0oVFRNecJcwOZYbrv/Wg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -24,7 +24,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=job_board_api
-DB_USERNAME=root
+DB_USERNAME=
 DB_PASSWORD=
 
 SESSION_DRIVER=database
@@ -63,3 +63,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+##Sanctum
+SANCTUM_TOKEN_PREFIX=jb-api
+TOKEN_EXPIRY=200
+
+##swagger
+L5_SWAGGER_CONST_HOST = http://localhost:8000
