fix: token expiry fix

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:uuWqGALnbfDINfBwL5HWhOx0oVFRNecJcwOZYbrv/Wg=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -66,7 +66,8 @@ VITE_APP_NAME="${APP_NAME}"
 
 ##Sanctum
 SANCTUM_TOKEN_PREFIX=jb-api
-TOKEN_EXPIRY=200
+TOKEN_EXPIRY=10 ##set token expiry
+# L5-Swagger
 
 ##swagger
 L5_SWAGGER_CONST_HOST = http://localhost:8000
